added fmt plugin instead of checkstyle, added modernizer plugin