@@ -7,9 +7,9 @@
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -22,8 +22,13 @@ package com.spotify.autoscaler.db;
 
 import static com.spotify.autoscaler.Main.APP_PREFIX;
 
+import com.codahale.metrics.Gauge;
 import com.google.common.annotations.VisibleForTesting;
+import com.spotify.autoscaler.AutoscaleJob;
 import com.spotify.autoscaler.util.ErrorCode;
+import com.spotify.metrics.core.SemanticMetricRegistry;
+import com.typesafe.config.Config;
+import com.zaxxer.hikari.HikariDataSource;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.sql.Timestamp;
@@ -40,27 +45,32 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-
 import java.util.TreeMap;
 import java.util.stream.Collectors;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
-
-import com.codahale.metrics.Gauge;
-import com.google.common.collect.ImmutableMap;
-import com.spotify.autoscaler.AutoscaleJob;
-import com.spotify.metrics.core.SemanticMetricRegistry;
-import com.typesafe.config.Config;
-import com.zaxxer.hikari.HikariDataSource;
 
 public class PostgresDatabase implements Database {
 
   private static final int MAX_POOL_SIZE = 16;
 
   private static final String[] COLUMNS =
-      new String[]{ "project_id", "instance_id", "cluster_id", "min_nodes",
-                    "max_nodes", "cpu_target", "overload_step", "last_change", "last_check",
-                    "enabled", "last_failure",
-                    "consecutive_failure_count", "last_failure_message" , "load_delta" , "error_code"};
+      new String[] {
+        "project_id",
+        "instance_id",
+        "cluster_id",
+        "min_nodes",
+        "max_nodes",
+        "cpu_target",
+        "overload_step",
+        "last_change",
+        "last_check",
+        "enabled",
+        "last_failure",
+        "consecutive_failure_count",
+        "last_failure_message",
+        "load_delta",
+        "error_code"
+      };
 
   private static final String ALL_COLUMNS = String.join(", ", COLUMNS);
 
@@ -70,19 +80,20 @@ public class PostgresDatabase implements Database {
   private final NamedParameterJdbcTemplate jdbc;
   private final SemanticMetricRegistry registry;
 
-  public PostgresDatabase(Config config, SemanticMetricRegistry registry) {
+  public PostgresDatabase(final Config config, final SemanticMetricRegistry registry) {
     this.dataSource = dataSource(config);
     this.jdbc = new NamedParameterJdbcTemplate(dataSource);
     this.registry = registry;
     registerMetricActiveConnections(this.registry);
   }
 
-  private void registerMetricActiveConnections(SemanticMetricRegistry registry) {
-    registry.register(APP_PREFIX.tagged("what", "open-db-connections"),
+  private void registerMetricActiveConnections(final SemanticMetricRegistry registry) {
+    registry.register(
+        APP_PREFIX.tagged("what", "open-db-connections"),
         (Gauge<Integer>) () -> this.dataSource.getHikariPoolMXBean().getTotalConnections());
   }
 
-  private HikariDataSource dataSource(Config config) {
+  private HikariDataSource dataSource(final Config config) {
     final HikariDataSource ds = new HikariDataSource();
     ds.setJdbcUrl(config.getString("jdbcUrl"));
     ds.setUsername(config.getString("username"));
@@ -99,9 +110,8 @@ public class PostgresDatabase implements Database {
   }
 
   @Override
-  public Optional<BigtableCluster> getBigtableCluster(final String projectId,
-                                                      final String instanceId,
-                                                      final String clusterId) {
+  public Optional<BigtableCluster> getBigtableCluster(
+      final String projectId, final String instanceId, final String clusterId) {
     if (projectId == null || instanceId == null || clusterId == null) {
       throw new IllegalArgumentException();
     }
@@ -136,9 +146,8 @@ public class PostgresDatabase implements Database {
   }
 
   @Override
-  public List<BigtableCluster> getBigtableClusters(final String projectId,
-                                                      final String instanceId,
-                                                      final String clusterId) {
+  public List<BigtableCluster> getBigtableClusters(
+      final String projectId, final String instanceId, final String clusterId) {
     final Map<String, String> args = new TreeMap<>();
     args.put("project_id", projectId);
     args.put("instance_id", instanceId);
@@ -147,8 +156,7 @@ public class PostgresDatabase implements Database {
         .query(
             selectClustersQuery(args),
             (rs, rowNum) -> buildClusterFromResultSet(rs),
-            args.values().toArray()
-        );
+            args.values().toArray());
   }
 
   private String selectClustersQuery(final Map<String, String> args) {
@@ -156,20 +164,23 @@ public class PostgresDatabase implements Database {
     args.values().removeIf(Objects::isNull);
     if (args.size() > 0) {
       sql.append(" WHERE ");
-      sql.append(String.join(" AND ",
-          // args.keys.map(key -> "$key = ?")
-          args.keySet().stream().map(key -> key + " = ?").collect(Collectors.toList())));
+      sql.append(
+          String.join(
+              " AND ",
+              // args.keys.map(key -> "$key = ?")
+              args.keySet().stream().map(key -> key + " = ?").collect(Collectors.toList())));
     }
     return sql.toString();
   }
 
-  private boolean upsertBigtableCluster(BigtableCluster cluster) {
-    final String sql = "INSERT INTO "
-        + "autoscale(project_id, instance_id, cluster_id, min_nodes, max_nodes, cpu_target, overload_step, enabled) "
-        + "VALUES(:project_id, :instance_id, :cluster_id, :min_nodes, :max_nodes, :cpu_target, :overload_step, :enabled) "
-        + "ON CONFLICT(project_id, instance_id, cluster_id) "
-        + "DO UPDATE SET "
-        + "min_nodes = :min_nodes, max_nodes = :max_nodes, cpu_target = :cpu_target, overload_step = :overload_step, enabled = :enabled";
+  private boolean upsertBigtableCluster(final BigtableCluster cluster) {
+    final String sql =
+        "INSERT INTO "
+            + "autoscale(project_id, instance_id, cluster_id, min_nodes, max_nodes, cpu_target, overload_step, enabled) "
+            + "VALUES(:project_id, :instance_id, :cluster_id, :min_nodes, :max_nodes, :cpu_target, :overload_step, :enabled) "
+            + "ON CONFLICT(project_id, instance_id, cluster_id) "
+            + "DO UPDATE SET "
+            + "min_nodes = :min_nodes, max_nodes = :max_nodes, cpu_target = :cpu_target, overload_step = :overload_step, enabled = :enabled";
     final Map<String, Object> params = new HashMap<String, Object>();
     params.put("project_id", cluster.projectId());
     params.put("instance_id", cluster.instanceId());
@@ -183,34 +194,51 @@ public class PostgresDatabase implements Database {
   }
 
   @Override
-  public boolean insertBigtableCluster(BigtableCluster cluster) {
+  public boolean insertBigtableCluster(final BigtableCluster cluster) {
     return upsertBigtableCluster(cluster);
   }
 
   @Override
-  public boolean updateBigtableCluster(BigtableCluster cluster) {
+  public boolean updateBigtableCluster(final BigtableCluster cluster) {
     return upsertBigtableCluster(cluster);
   }
 
   @Override
-  public boolean deleteBigtableCluster(String projectId, String instanceId, String clusterId) {
-    final String sql = "DELETE FROM autoscale WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
-    int numRowsUpdated = jdbc.getJdbcOperations().update(sql, projectId, instanceId, clusterId);
+  public boolean deleteBigtableCluster(
+      final String projectId, final String instanceId, final String clusterId) {
+    final String sql =
+        "DELETE FROM autoscale WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
+    final int numRowsUpdated =
+        jdbc.getJdbcOperations().update(sql, projectId, instanceId, clusterId);
     return numRowsUpdated == 1;
   }
 
   @Override
-  public boolean setLastChange(String projectId, String instanceId, String clusterId, Instant lastChange) {
-    final String sql = "UPDATE autoscale SET last_change = ? WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
-    int numRowsUpdated = jdbc.getJdbcOperations().update(sql, Timestamp.from(lastChange), projectId, instanceId, clusterId);
+  public boolean setLastChange(
+      final String projectId,
+      final String instanceId,
+      final String clusterId,
+      final Instant lastChange) {
+    final String sql =
+        "UPDATE autoscale SET last_change = ? WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
+    final int numRowsUpdated =
+        jdbc.getJdbcOperations()
+            .update(sql, Timestamp.from(lastChange), projectId, instanceId, clusterId);
     return numRowsUpdated == 1;
   }
 
   @VisibleForTesting
-  boolean setLastCheck(String projectId, String instanceId, String clusterId, Instant lastCheck) {
-    final String sql = "UPDATE autoscale SET last_check = ? WHERE project_id = ? AND "
-                       + "instance_id = ? AND cluster_id = ?";
-    int numRowsUpdated = jdbc.getJdbcOperations().update(sql, Timestamp.from(lastCheck), projectId, instanceId, clusterId);
+  boolean setLastCheck(
+      final String projectId,
+      final String instanceId,
+      final String clusterId,
+      final Instant lastCheck) {
+    final String sql =
+        "UPDATE autoscale SET last_check = ? WHERE project_id = ? AND "
+            + "instance_id = ? AND cluster_id = ?";
+    final int numRowsUpdated =
+        jdbc.getJdbcOperations()
+            .update(sql, Timestamp.from(lastCheck), projectId, instanceId, clusterId);
     return numRowsUpdated == 1;
   }
 
@@ -218,69 +246,98 @@ public class PostgresDatabase implements Database {
    * Fetch a list of enabled clusters that haven't been checked for autoscaling for at least
    * CHECK_INTERVAL seconds.
    *
-   * Note that we need to return all possible clusters here because there will be additional
-   * client side filtering done later, so any limiting could cause starvation.
-   * This shouldn't be a problem unless we have thousands of clusters.
+   * <p>Note that we need to return all possible clusters here because there will be additional
+   * client side filtering done later, so any limiting could cause starvation. This shouldn't be a
+   * problem unless we have thousands of clusters.
    */
   @Override
   public List<BigtableCluster> getCandidateClusters() {
-    final String sql = "SELECT " + ALL_COLUMNS + " FROM autoscale "
-        + "WHERE enabled = true AND coalesce(last_check, 'epoch') < current_timestamp - CAST"
-                       + "(:check_interval AS interval) "
-        + "ORDER BY coalesce(last_check, 'epoch') ASC";
+    final String sql =
+        "SELECT "
+            + ALL_COLUMNS
+            + " FROM autoscale "
+            + "WHERE enabled = true AND coalesce(last_check, 'epoch') < current_timestamp - CAST"
+            + "(:check_interval AS interval) "
+            + "ORDER BY coalesce(last_check, 'epoch') ASC";
 
-    final List<BigtableCluster> list = jdbc.query(sql,
-      ImmutableMap.of("check_interval", AutoscaleJob.CHECK_INTERVAL.getSeconds() + " seconds"),
-      (rs, rowNum) -> buildClusterFromResultSet(rs));
+    final List<BigtableCluster> list =
+        jdbc.query(
+            sql,
+            Map.of("check_interval", AutoscaleJob.CHECK_INTERVAL.getSeconds() + " seconds"),
+            (rs, rowNum) -> buildClusterFromResultSet(rs));
     return list;
   }
 
   /**
-   * Updates last checked of a specific cluster atomically if the lastChecked value is the same
-   * as in the database.
-   * This ensures that only one thread/host will update this cluster.
+   * Updates last checked of a specific cluster atomically if the lastChecked value is the same as
+   * in the database. This ensures that only one thread/host will update this cluster.
+   *
    * @return true if last checked got updated, false if it was already updated by some other thread
    */
   @Override
-  public boolean updateLastChecked(BigtableCluster cluster) {
-    final String sql = "UPDATE autoscale SET last_check = current_timestamp WHERE project_id = ? AND instance_id = "
-                       + "? AND cluster_id = ? AND coalesce(last_check, 'epoch') = ?";
+  public boolean updateLastChecked(final BigtableCluster cluster) {
+    final String sql =
+        "UPDATE autoscale SET last_check = current_timestamp WHERE project_id = ? AND instance_id = "
+            + "? AND cluster_id = ? AND coalesce(last_check, 'epoch') = ?";
 
-    int numRowsUpdated = jdbc.getJdbcOperations().update(sql, cluster.projectId(),
-        cluster.instanceId(), cluster.clusterId(),
-        cluster.lastCheck().isPresent() ? Timestamp.from(cluster.lastCheck().get()) :
-        Timestamp.from(Instant.ofEpochSecond(0)));
+    final int numRowsUpdated =
+        jdbc.getJdbcOperations()
+            .update(
+                sql,
+                cluster.projectId(),
+                cluster.instanceId(),
+                cluster.clusterId(),
+                cluster.lastCheck().isPresent()
+                    ? Timestamp.from(cluster.lastCheck().get())
+                    : Timestamp.from(Instant.ofEpochSecond(0)));
     return numRowsUpdated == 1;
   }
 
   @Override
-  public boolean clearFailureCount(String projectId, String instanceId, String clusterId) {
-    final String sql = "UPDATE autoscale SET consecutive_failure_count = 0 WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
+  public boolean clearFailureCount(
+      final String projectId, final String instanceId, final String clusterId) {
+    final String sql =
+        "UPDATE autoscale SET consecutive_failure_count = 0 WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
     return jdbc.getJdbcOperations().update(sql, projectId, instanceId, clusterId) == 1;
   }
 
   @Override
-  public boolean increaseFailureCount(String projectId, String instanceId, String clusterId, Instant lastFailure,
-                                      String lastFailureMessage, ErrorCode errorCode) {
-    final String sql = "UPDATE autoscale "
-        + "SET last_failure = ?, consecutive_failure_count = consecutive_failure_count + 1, last_failure_message = ? "
-                       + ", error_code = ?::error_code "
-        + "WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
-    int numRowsUpdated = jdbc.getJdbcOperations().update(sql,
-        Timestamp.from(lastFailure), lastFailureMessage, errorCode.name(), projectId,  instanceId, clusterId);
+  public boolean increaseFailureCount(
+      final String projectId,
+      final String instanceId,
+      final String clusterId,
+      final Instant lastFailure,
+      final String lastFailureMessage,
+      final ErrorCode errorCode) {
+    final String sql =
+        "UPDATE autoscale "
+            + "SET last_failure = ?, consecutive_failure_count = consecutive_failure_count + 1, last_failure_message = ? "
+            + ", error_code = ?::error_code "
+            + "WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
+    final int numRowsUpdated =
+        jdbc.getJdbcOperations()
+            .update(
+                sql,
+                Timestamp.from(lastFailure),
+                lastFailureMessage,
+                errorCode.name(),
+                projectId,
+                instanceId,
+                clusterId);
     return numRowsUpdated == 1;
   }
 
   @Override
-  public void logResize(ClusterResizeLog log) {
-    final String sql = "INSERT INTO resize_log"
-        + "(timestamp, project_id, instance_id, cluster_id, min_nodes, max_nodes, cpu_target, "
-        + "overload_step, current_nodes, target_nodes, cpu_utilization, storage_utilization, detail, "
-        + "success, error_message, load_delta) "
-        + "VALUES "
-        + "(:timestamp, :project_id, :instance_id, :cluster_id, :min_nodes, :max_nodes, :cpu_target, "
-        + ":overload_step, :current_nodes, :target_nodes, :cpu_utilization, :storage_utilization, :detail, "
-        + ":success, :error_message, :load_delta)";
+  public void logResize(final ClusterResizeLog log) {
+    final String sql =
+        "INSERT INTO resize_log"
+            + "(timestamp, project_id, instance_id, cluster_id, min_nodes, max_nodes, cpu_target, "
+            + "overload_step, current_nodes, target_nodes, cpu_utilization, storage_utilization, detail, "
+            + "success, error_message, load_delta) "
+            + "VALUES "
+            + "(:timestamp, :project_id, :instance_id, :cluster_id, :min_nodes, :max_nodes, :cpu_target, "
+            + ":overload_step, :current_nodes, :target_nodes, :cpu_utilization, :storage_utilization, :detail, "
+            + ":success, :error_message, :load_delta)";
     final Map<String, Object> params = new HashMap<String, Object>();
     params.put("timestamp", log.timestamp());
     params.put("project_id", log.projectId());
@@ -304,13 +361,14 @@ public class PostgresDatabase implements Database {
   @Override
   public long getDailyResizeCount() {
     final String sql = "SELECT COUNT(*) FROM RESIZE_LOG WHERE TIMESTAMP >= :midnight";
-    return jdbc.queryForObject(sql, ImmutableMap.of("midnight", midnight()), Long.class);
+    return jdbc.queryForObject(sql, Map.of("midnight", midnight()), Long.class);
   }
 
   private LocalDateTime midnight() {
     // GCP quotas are reset at midnight *Pacific Time*, resize timestamps are in UTC in DB
     final ZoneId gcpZone = ZoneId.of("America/Los_Angeles");
-    final LocalDateTime localMidnight = LocalDateTime.of(LocalDate.now(gcpZone), LocalTime.MIDNIGHT);
+    final LocalDateTime localMidnight =
+        LocalDateTime.of(LocalDate.now(gcpZone), LocalTime.MIDNIGHT);
     final ZonedDateTime gcpZoneMidnight = localMidnight.atZone(gcpZone);
     return gcpZoneMidnight.withZoneSameInstant(ZoneId.of("UTC")).toLocalDateTime();
   }
@@ -321,14 +379,16 @@ public class PostgresDatabase implements Database {
   }
 
   @Override
-  public Collection<ClusterResizeLog> getLatestResizeEvents(String projectId, String instanceId, String clusterId) {
-    final String sql = "SELECT "
-        + "timestamp, project_id, instance_id, cluster_id, min_nodes, max_nodes, load_delta, cpu_target, overload_step, "
-        + "current_nodes, target_nodes, cpu_utilization, storage_utilization, detail, success, error_message "
-        + "FROM resize_log "
-        + "WHERE project_id = :project_id AND instance_id = :instance_id AND cluster_id = :cluster_id "
-        + "ORDER BY timestamp DESC "
-        + "LIMIT 100";
+  public Collection<ClusterResizeLog> getLatestResizeEvents(
+      final String projectId, final String instanceId, final String clusterId) {
+    final String sql =
+        "SELECT "
+            + "timestamp, project_id, instance_id, cluster_id, min_nodes, max_nodes, load_delta, cpu_target, overload_step, "
+            + "current_nodes, target_nodes, cpu_utilization, storage_utilization, detail, success, error_message "
+            + "FROM resize_log "
+            + "WHERE project_id = :project_id AND instance_id = :instance_id AND cluster_id = :cluster_id "
+            + "ORDER BY timestamp DESC "
+            + "LIMIT 100";
     final Map<String, Object> params = new HashMap<String, Object>();
     params.put("project_id", projectId);
     params.put("instance_id", instanceId);
@@ -336,7 +396,8 @@ public class PostgresDatabase implements Database {
     return jdbc.query(sql, params, (rs, rowNum) -> buildClusterResizeLogFromResultSet(rs));
   }
 
-  private ClusterResizeLog buildClusterResizeLogFromResultSet(final ResultSet rs) throws SQLException {
+  private ClusterResizeLog buildClusterResizeLogFromResultSet(final ResultSet rs)
+      throws SQLException {
     return new ClusterResizeLogBuilder()
         .timestamp(rs.getTimestamp("timestamp"))
         .projectId(rs.getString("project_id"))
@@ -358,12 +419,17 @@ public class PostgresDatabase implements Database {
   }
 
   @Override
-  public boolean updateLoadDelta(String projectId, String instanceId, String clusterId, Integer loadDelta) {
-    final String sql = "UPDATE autoscale "
-                       + "SET load_delta = ? "
-                       + "WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
-    int numRowsUpdated = jdbc.getJdbcOperations().update(sql, loadDelta, projectId, instanceId, clusterId);
+  public boolean updateLoadDelta(
+      final String projectId,
+      final String instanceId,
+      final String clusterId,
+      final Integer loadDelta) {
+    final String sql =
+        "UPDATE autoscale "
+            + "SET load_delta = ? "
+            + "WHERE project_id = ? AND instance_id = ? AND cluster_id = ?";
+    final int numRowsUpdated =
+        jdbc.getJdbcOperations().update(sql, loadDelta, projectId, instanceId, clusterId);
     return numRowsUpdated == 1;
   }
-
 }
